--- a/DecisionTree/.classpath
+++ b/DecisionTree/.classpath
@@ -4,5 +4,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="/h/d1/l/dat13at1/Desktop/eda132/DecisionTree/ssj.jar"/>
 	<classpathentry kind="lib" path="/h/d1/l/dat13at1/Desktop/eda132/DecisionTree/pj20150107.jar"/>
+	<classpathentry kind="lib" path="pj20150107.jar"/>
+	<classpathentry kind="lib" path="ssj.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
